[gd_scene load_steps=41 format=3 uid="uid://6vb4a4k7tuj0"]

[ext_resource type="PackedScene" uid="uid://ckvotfm2y72b5" path="res://scenes/upgradenode.tscn" id="1_l6cm7"]
[ext_resource type="Script" uid="uid://diflg0vs11y3" path="res://scripts/main_menu.gd" id="1_lgwnu"]
[ext_resource type="Script" uid="uid://dqj6tcnexoamm" path="res://scripts/skill_tree.gd" id="1_oa1go"]
[ext_resource type="AudioStream" uid="uid://civ7o55yrccfs" path="res://assets/End_of_The_One_Day.mp3" id="2_rcqid"]
[ext_resource type="Script" uid="uid://bdxixeq4bsgur" path="res://Skill.gd" id="2_wu84c"]
[ext_resource type="Script" uid="uid://cau45jdiwfmt4" path="res://scripts/Stats.gd" id="3_8ln24"]
[ext_resource type="Texture2D" uid="uid://dhrcc71o142rg" path="res://assets/fieryHeart.svg" id="4_rtw2f"]
[ext_resource type="Script" uid="uid://dx5gcjx2g6gen" path="res://scripts/UI_Gold.gd" id="5_8ln24"]
[ext_resource type="Texture2D" uid="uid://8g3yd7cupu3x" path="res://assets/newbie.svg" id="6_jk1qb"]
[ext_resource type="Texture2D" uid="uid://b5nut51nt28q" path="res://assets/coin.png" id="6_rtw2f"]
[ext_resource type="Texture2D" uid="uid://b83t1i0bfl0eo" path="res://assets/runshoe.svg" id="7_5dd4i"]
[ext_resource type="Texture2D" uid="uid://omxnupieilyl" path="res://assets/defaultface.svg" id="9_flqon"]
[ext_resource type="Script" uid="uid://h1wh2jmnarvq" path="res://scripts/start.gd" id="10_5dd4i"]
[ext_resource type="Texture2D" uid="uid://dro1frg51xrup" path="res://assets/thumb.png" id="13_1ajci"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_flqon"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.225, 0.225, 0.225, 0.6)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5dd4i"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 1, 1, 0.498039)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lgwnu"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.419608, 0.419608, 0.419608, 0.545098)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="SystemFont" id="SystemFont_flqon"]
font_names = PackedStringArray("Trebuchet MS")

[sub_resource type="Theme" id="Theme_rcqid"]
default_font = SubResource("SystemFont_flqon")
Button/colors/font_color = Color(0, 0, 0, 1)
Button/styles/hover = SubResource("StyleBoxFlat_flqon")
Button/styles/normal = SubResource("StyleBoxFlat_5dd4i")
Button/styles/pressed = SubResource("StyleBoxFlat_lgwnu")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ajci"]
bg_color = Color(1, 0.788235, 0.054902, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.541019, 0.365652, 1.92523e-07, 1)
corner_detail = 20

[sub_resource type="Resource" id="Resource_gw5y6"]
script = ExtResource("3_8ln24")
description = "Your bare self, with no upgrades..."
max_health = 0.0
recovery = 0.0
armor = 0.0
movement_speed = 0.0
might = 0.0
area = 0.0
magnet = 0.0
growth = 0.0
luck = 0.0
metadata/_custom_type_script = "uid://cau45jdiwfmt4"

[sub_resource type="Resource" id="Resource_svtp6"]
script = ExtResource("2_wu84c")
name = "This is you"
texture = ExtResource("9_flqon")
cost = 0
stats = SubResource("Resource_gw5y6")
metadata/_custom_type_script = "uid://bdxixeq4bsgur"

[sub_resource type="Resource" id="Resource_oa1go"]
script = ExtResource("3_8ln24")
description = "Increase attack power"
max_health = 0.0
recovery = 0.0
armor = 0.0
movement_speed = 0.0
might = 0.2
area = 0.0
magnet = 0.0
growth = 0.0
luck = 0.0
metadata/_custom_type_script = "uid://cau45jdiwfmt4"

[sub_resource type="Resource" id="Resource_tbmy8"]
script = ExtResource("2_wu84c")
name = "Might I"
texture = ExtResource("4_rtw2f")
cost = 10
stats = SubResource("Resource_oa1go")
metadata/_custom_type_script = "uid://bdxixeq4bsgur"

[sub_resource type="Resource" id="Resource_wu84c"]
script = ExtResource("3_8ln24")
description = "Increase attack power more"
max_health = 0.0
recovery = 0.0
armor = 0.0
movement_speed = 0.0
might = 0.2
area = 0.0
magnet = 0.0
growth = 0.0
luck = 0.0
metadata/_custom_type_script = "uid://cau45jdiwfmt4"

[sub_resource type="Resource" id="Resource_8ln24"]
script = ExtResource("2_wu84c")
name = "Might II"
texture = ExtResource("4_rtw2f")
cost = 20
stats = SubResource("Resource_wu84c")
metadata/_custom_type_script = "uid://bdxixeq4bsgur"

[sub_resource type="Resource" id="Resource_rtw2f"]
script = ExtResource("3_8ln24")
description = "Increase attack power even MORE"
max_health = 0.0
recovery = 0.0
armor = 0.0
movement_speed = 0.0
might = 0.2
area = 0.0
magnet = 0.0
growth = 0.0
luck = 0.0
metadata/_custom_type_script = "uid://cau45jdiwfmt4"

[sub_resource type="Resource" id="Resource_jk1qb"]
script = ExtResource("2_wu84c")
name = "Might III"
texture = ExtResource("4_rtw2f")
cost = 30
stats = SubResource("Resource_rtw2f")
metadata/_custom_type_script = "uid://bdxixeq4bsgur"

[sub_resource type="Resource" id="Resource_lgwnu"]
script = ExtResource("3_8ln24")
description = "Increase XP Gain"
max_health = 0.0
recovery = 0.0
armor = 0.0
movement_speed = 0.0
might = 0.0
area = 0.0
magnet = 0.0
growth = 0.1
luck = 0.0
metadata/_custom_type_script = "uid://cau45jdiwfmt4"

[sub_resource type="Resource" id="Resource_flqon"]
script = ExtResource("2_wu84c")
name = "Growth I"
texture = ExtResource("6_jk1qb")
cost = 50
stats = SubResource("Resource_lgwnu")
metadata/_custom_type_script = "uid://bdxixeq4bsgur"

[sub_resource type="Resource" id="Resource_rcqid"]
script = ExtResource("3_8ln24")
description = "Increase XP Gain a bit more"
max_health = 0.0
recovery = 0.0
armor = 0.0
movement_speed = 0.0
might = 0.0
area = 0.0
magnet = 0.0
growth = 0.2
luck = 0.0
metadata/_custom_type_script = "uid://cau45jdiwfmt4"

[sub_resource type="Resource" id="Resource_1ajci"]
script = ExtResource("2_wu84c")
name = "Growth II"
texture = ExtResource("6_jk1qb")
cost = 100
stats = SubResource("Resource_rcqid")
metadata/_custom_type_script = "uid://bdxixeq4bsgur"

[sub_resource type="Resource" id="Resource_7b55j"]
script = ExtResource("3_8ln24")
description = "Increase movement speed"
max_health = 0.0
recovery = 0.0
armor = 0.0
movement_speed = 50.0
might = 0.0
area = 0.0
magnet = 0.0
growth = 0.0
luck = 0.0
metadata/_custom_type_script = "uid://cau45jdiwfmt4"

[sub_resource type="Resource" id="Resource_5pajh"]
script = ExtResource("2_wu84c")
name = "Movement Speed I"
texture = ExtResource("7_5dd4i")
cost = 10
stats = SubResource("Resource_7b55j")
metadata/_custom_type_script = "uid://bdxixeq4bsgur"

[sub_resource type="Resource" id="Resource_j7ex8"]
script = ExtResource("3_8ln24")
description = "Increase movement speed more"
max_health = 0.0
recovery = 0.0
armor = 0.0
movement_speed = 100.0
might = 0.0
area = 0.0
magnet = 0.0
growth = 0.0
luck = 0.0
metadata/_custom_type_script = "uid://cau45jdiwfmt4"

[sub_resource type="Resource" id="Resource_a8gd2"]
script = ExtResource("2_wu84c")
name = "Movement Speed II"
texture = ExtResource("7_5dd4i")
cost = 20
stats = SubResource("Resource_j7ex8")
metadata/_custom_type_script = "uid://bdxixeq4bsgur"

[sub_resource type="Resource" id="Resource_hstxw"]
script = ExtResource("3_8ln24")
description = "Top speed!"
max_health = 0.0
recovery = 0.0
armor = 0.0
movement_speed = 200.0
might = 0.0
area = 0.0
magnet = 0.0
growth = 0.0
luck = 0.0
metadata/_custom_type_script = "uid://cau45jdiwfmt4"

[sub_resource type="Resource" id="Resource_8egab"]
script = ExtResource("2_wu84c")
name = "Movement Speed III"
texture = ExtResource("7_5dd4i")
cost = 40
stats = SubResource("Resource_hstxw")
metadata/_custom_type_script = "uid://bdxixeq4bsgur"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rcqid"]
bg_color = Color(0.94902, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7b55j"]
bg_color = Color(0.6, 0.6, 0.6, 0.572549)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_rcqid")
script = ExtResource("1_lgwnu")
menu_bgm = ExtResource("2_rcqid")

[node name="UpgradeWindow" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SkillTree" type="Panel" parent="UpgradeWindow"]
z_index = -3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1ajci")
script = ExtResource("1_oa1go")

[node name="Self" type="Control" parent="UpgradeWindow/SkillTree"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = 72.0
offset_right = 25.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2

[node name="Upgrade" parent="UpgradeWindow/SkillTree/Self" instance=ExtResource("1_l6cm7")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
button_pressed = true
skill = SubResource("Resource_svtp6")

[node name="Might" type="Control" parent="UpgradeWindow/SkillTree"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.0
offset_top = 71.0
offset_right = -74.0
offset_bottom = 111.0
grow_horizontal = 2
grow_vertical = 2

[node name="Upgrade" parent="UpgradeWindow/SkillTree/Might" instance=ExtResource("1_l6cm7")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
skill = SubResource("Resource_tbmy8")

[node name="Upgrade2" parent="UpgradeWindow/SkillTree/Might" instance=ExtResource("1_l6cm7")]
layout_mode = 0
offset_left = 2.0
offset_top = -79.0
offset_right = 42.0
offset_bottom = -39.0
skill = SubResource("Resource_8ln24")

[node name="Upgrade3" parent="UpgradeWindow/SkillTree/Might" instance=ExtResource("1_l6cm7")]
layout_mode = 0
offset_left = 1.0
offset_top = -168.0
offset_right = 41.0
offset_bottom = -128.0
skill = SubResource("Resource_jk1qb")

[node name="Growth" type="Control" parent="UpgradeWindow/SkillTree"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -13.0
offset_right = 24.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2

[node name="Upgrade" parent="UpgradeWindow/SkillTree/Growth" instance=ExtResource("1_l6cm7")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
skill = SubResource("Resource_flqon")

[node name="Upgrade2" parent="UpgradeWindow/SkillTree/Growth" instance=ExtResource("1_l6cm7")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -98.0
offset_right = 24.0
offset_bottom = -58.0
grow_horizontal = 2
grow_vertical = 2
skill = SubResource("Resource_1ajci")

[node name="MovementSpeed" type="Control" parent="UpgradeWindow/SkillTree"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 76.0
offset_top = 72.0
offset_right = 116.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2

[node name="Upgrade" parent="UpgradeWindow/SkillTree/MovementSpeed" instance=ExtResource("1_l6cm7")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
skill = SubResource("Resource_5pajh")

[node name="Upgrade2" parent="UpgradeWindow/SkillTree/MovementSpeed" instance=ExtResource("1_l6cm7")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -103.0
offset_right = 25.0
offset_bottom = -63.0
grow_horizontal = 2
grow_vertical = 2
skill = SubResource("Resource_a8gd2")

[node name="Upgrade3" parent="UpgradeWindow/SkillTree/MovementSpeed" instance=ExtResource("1_l6cm7")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -185.0
offset_right = 25.0
offset_bottom = -145.0
grow_horizontal = 2
grow_vertical = 2
skill = SubResource("Resource_8egab")

[node name="BackToMenu" type="Button" parent="UpgradeWindow"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -111.0
offset_top = -134.0
offset_right = 111.0
offset_bottom = -84.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 36
text = "Back to Menu"

[node name="Gold" type="Label" parent="UpgradeWindow"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -87.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 60.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 31
text = "0"
script = ExtResource("5_8ln24")

[node name="TextureRect" type="TextureRect" parent="UpgradeWindow"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -146.0
offset_top = 14.0
offset_right = -74.0
offset_bottom = 86.0
grow_horizontal = 0
scale = Vector2(0.56, 0.559999)
texture = ExtResource("6_rtw2f")

[node name="TextureRect2" type="TextureRect" parent="UpgradeWindow/TextureRect"]
layout_mode = 0
offset_left = 18.0
offset_top = 26.0
offset_right = 90.0
offset_bottom = 98.0
texture = ExtResource("6_rtw2f")

[node name="TextureRect" type="TextureRect" parent="UpgradeWindow/TextureRect"]
layout_mode = 0
offset_left = -24.0
offset_top = 27.0
offset_right = 48.0
offset_bottom = 99.0
texture = ExtResource("6_rtw2f")

[node name="Delete" type="Button" parent="UpgradeWindow"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -146.0
offset_top = -44.0
offset_right = -15.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
text = "Delete Save Data"

[node name="ConfirmDelete" type="Button" parent="UpgradeWindow/Delete"]
visible = false
layout_mode = 0
offset_left = -11.0
offset_top = -36.0
offset_right = 136.0
offset_bottom = -8.0
theme_override_styles/normal = SubResource("StyleBoxFlat_rcqid")
text = "Confirm Save Delete"

[node name="Menu" type="Panel" parent="."]
z_index = -3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1ajci")

[node name="TextureRect" type="TextureRect" parent="Menu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -225.0
offset_top = 14.0
offset_right = 247.0
offset_bottom = 388.0
grow_horizontal = 2
texture = ExtResource("13_1ajci")

[node name="Start" type="Button" parent="Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -116.5
offset_top = 59.0
offset_right = 116.5
offset_bottom = 199.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 96
text = "Start"
script = ExtResource("10_5dd4i")

[node name="Upgrades" type="Button" parent="Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.0
offset_top = 220.0
offset_right = 87.0
offset_bottom = 278.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "Upgrades"

[node name="Time Record" type="Label" parent="Menu"]
layout_mode = 0
offset_left = 19.0
offset_top = 18.0
offset_right = 114.0
offset_bottom = 61.0
theme_override_styles/normal = SubResource("StyleBoxFlat_7b55j")
text = "Time Record:
"

[connection signal="pressed" from="UpgradeWindow/BackToMenu" to="." method="_on_back_to_menu_pressed"]
[connection signal="pressed" from="UpgradeWindow/Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="UpgradeWindow/Delete/ConfirmDelete" to="." method="_on_confirm_delete_pressed"]
[connection signal="pressed" from="Menu/Start" to="Menu/Start" method="_on_pressed"]
[connection signal="pressed" from="Menu/Upgrades" to="." method="_on_upgrades_pressed"]
